# grokking-lottery

./: README.md  pyproject.toml
configs/: config.yaml
configs/dataset/: modular_add.yaml
configs/experiment/: exp_a.yaml  exp_b.yaml  exp_c.yaml
configs/model/: small_transformer.yaml
configs/pruning/: imp.yaml
configs/training/: default.yaml
experiments/: exp_a_grok_then_prune.py  exp_b_lth_then_grok.py  exp_c_wd_ablation.py
scripts/: run_parallel_seeds.py
src/: data.py  metrics.py  model.py  prune.py  train.py
